<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/cost_of_service"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/imageView"
        android:hint="cost of service"
        app:layout_constraintTop_toTopOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cost_edit_text"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:importantForAccessibility="no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_store_24" />


    <TextView
        android:id="@+id/service_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/how_was_the_service"
        app:layout_constraintStart_toEndOf="@id/how_service_was"
        app:layout_constraintTop_toBottomOf="@id/cost_of_service"
        />

    <RadioGroup
        android:id="@+id/radio_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/how_service_was"
        app:layout_constraintStart_toStartOf="@id/service_question"
        android:orientation="vertical"
        android:checkedButton="@id/twenty_percent"
        >

        <RadioButton
            android:id="@+id/twenty_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amazing_20"/>

        <RadioButton
            android:id="@+id/fifteen_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_15"/>

        <RadioButton
            android:id="@+id/ten_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/poor_10"/>
    </RadioGroup>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_one"
        android:layout_width="0dp"

        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/round_off_the_tip"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="@id/radio_button"
        app:layout_constraintTop_toBottomOf="@id/radio_button" />

     <Button
         android:id="@+id/button_tocalc"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/calculate_the_tip"
         app:layout_constraintTop_toBottomOf="@id/switch_one"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         />

    <TextView
        android:id="@+id/tip_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_tocalc"
        tools:text="Tip Amount: $10" />



    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/how_service_was"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cost_of_service"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/ic_baseline_room_service_24"
         />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_button"
        app:srcCompat="@drawable/ic_round_up" />


</androidx.constraintlayout.widget.ConstraintLayout>